--- a/app-server.yml
+++ b/app-server.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: app-servers
+  become: true
   tasks:
     - name: install docker
       apt: name=docker state=present update_cache=yes
