--- a/app-server.yml
+++ b/app-server.yml
@@ -1,6 +1,10 @@
 ---
 - hosts: app-servers
   become: true
+  gather_facts: no
+  pre_tasks:
+    - name: 'install Python2'
+      raw: sudo apt-get -y install python
   tasks:
     - name: install docker
       apt: name=docker state=present update_cache=yes
