--- a/app-server.yml
+++ b/app-server.yml
@@ -7,4 +7,4 @@
       raw: sudo apt-get -y install python
   tasks:
     - name: install docker
-      apt: name=docker state=present update_cache=yes
+      apt: name=docker.io state=present update_cache=yes
